[gd_scene load_steps=9 format=3 uid="uid://7vvfh3uvv8u3"]

[ext_resource type="Script" uid="uid://c0g8uisavfrlg" path="res://Scenes/rooms/tali_room.gd" id="1_gbb8h"]
[ext_resource type="Script" uid="uid://clfviyn560tqx" path="res://Scripts/dialogue_manager.gd" id="1_m0a88"]
[ext_resource type="Texture2D" uid="uid://8xxfou047lgl" path="res://Assets/rooms/tali.jpg" id="2_n5n4x"]
[ext_resource type="Texture2D" uid="uid://dxlkvucg3ebtu" path="res://Assets/characters/tali.png" id="3_gbb8h"]
[ext_resource type="Texture2D" uid="uid://qf5r11mtte8m" path="res://Assets/single/bubble-chat2.png" id="4_8d81q"]
[ext_resource type="Texture2D" uid="uid://86bi3l0jmaun" path="res://Assets/characters/tav2.png" id="4_vpiuu"]
[ext_resource type="FontFile" uid="uid://bnbida7kfwdc4" path="res://Assets/fonts/SN_bloom.ttf" id="5_8d81q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nu20m"]
texture = ExtResource("4_8d81q")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gbb8h")

[node name="taliRoom" type="CanvasLayer" parent="."]
script = ExtResource("1_m0a88")

[node name="RoomBackground" type="TextureRect" parent="taliRoom"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_n5n4x")
metadata/_edit_lock_ = true

[node name="mali" type="Sprite2D" parent="taliRoom"]
position = Vector2(1316, 649)
scale = Vector2(0.55, 0.55)
texture = ExtResource("3_gbb8h")
metadata/_edit_lock_ = true

[node name="mako" type="Sprite2D" parent="taliRoom"]
position = Vector2(483, 653)
scale = Vector2(0.55, 0.55)
texture = ExtResource("4_vpiuu")

[node name="DialogBox" type="Panel" parent="taliRoom"]
offset_left = 532.0
offset_top = 42.0
offset_right = 1202.0
offset_bottom = 392.0
theme_override_styles/panel = SubResource("StyleBoxTexture_nu20m")

[node name="CharacterName" type="Label" parent="taliRoom/DialogBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.0
offset_top = 22.0
offset_right = 71.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8d81q")
theme_override_font_sizes/font_size = 21
text = "שירן דאנס:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DialogText" type="Label" parent="taliRoom/DialogBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -610.0
offset_top = 75.0
offset_right = -30.0
offset_bottom = 205.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "שירן דאנס"
horizontal_alignment = 2
autowrap_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="taliRoom/DialogBox"]
layout_mode = 0
offset_left = 60.0
offset_top = 116.0
offset_right = 640.0
offset_bottom = 246.0

[node name="Button" type="Button" parent="taliRoom/DialogBox/OptionsContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="taliRoom/DialogBox/OptionsContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="taliRoom/DialogBox/OptionsContainer"]
layout_mode = 2
